--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Maquette Web</title>
     <link rel="stylesheet" href="css/reset.css">
@@ -37,7 +37,7 @@
     <div class="container__header__menu">
         <div class="container_header">
             <div class="header__menu__logo">
-                <img src="image/logo.png" width="50" height="50">
+                <img src="image/logo.png" width="50" height="50" alt="logo">
                 <span> Humane </span>
             </div>
             <div class="header__menu_list">
